--- a/templates/webproject_app/services.html
+++ b/templates/webproject_app/services.html
@@ -1,5 +1,6 @@
-<html>
-    <body>
-        <h1>Services</h1>
-    </body>
-</html>
+{% extends 'base.html' %}
+  {% load static %}
+
+
+  {% block content %}
+  {% endblock %}
