--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
           <li class="nav-item {% if request.path == '/contact/' %}active{% endif %} px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="{% url 'Contact' %}">Contacto</a>
           </li>
-          <li class="nav-item {% if request.path == '/blogs/' %}active{% endif %} px-lg-4">
+          <li class="nav-item {% if request.path|slice:':7' == '/blogs/' %}active{% endif %} px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="{% url 'Blogs' %}">Blogs</a>
           </li>
          
