--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -1,6 +1,23 @@
 {% extends 'base.html' %}
   {% load static %}
-
-
   {% block content %}
+
+    <div class="container">
+    
+      <div class="row">
+
+        {% for product in products %}
+
+          <div class="col-md-3">
+
+            {% include "store/product_card.html" %}
+
+          </div>
+
+        {% endfor %}
+
+      </div>
+    </div>
+
   {% endblock %}
+
