--- a/templates/base.html
+++ b/templates/base.html
@@ -28,26 +28,26 @@
  <!-- Navbar -->
  <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
-      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="{% url 'Home' %}">Gestión de Pedidos</a>
+      <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="{% url 'home' %}">Gestión de Pedidos</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
           <li class="nav-item {% if request.path == '/'%}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'Home' %}">Inicio</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'home' %}">Inicio</a>
           </li>
           <li class="nav-item {% if request.path == '/services/'%}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'Services' %}">Servicios</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'services' %}">Servicios</a>
           </li>
           <li class="nav-item {% if request.path == '/store/' %}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'Store' %}">Tienda</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'store' %}">Tienda</a>
           </li>
           <li class="nav-item {% if request.path == '/contact/' %}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'Contact' %}">Contacto</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'contact' %}">Contacto</a>
           </li>
           <li class="nav-item {% if request.path|slice:':7' == '/blogs/' %}active{% endif %} px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="{% url 'Blogs' %}">Blogs</a>
+            <a class="nav-link text-uppercase text-expanded" href="{% url 'blogs' %}">Blogs</a>
           </li>
          
         </ul>
