--- a/templates/store/product_card.html
+++ b/templates/store/product_card.html
@@ -13,6 +13,9 @@
         
     </div>
 
+    <div class="card-footer text-center">
+        <a href="#" class="btn btn-success">Add to cart</a>
+    </div> 
 
 
 
