--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -3,6 +3,10 @@
   {% block content %}
 
     <div class="container">
+
+      <div style="float: right;">
+        {% include "store/cart.html" %}
+      </div>
     
       <div class="row">
 
