Add products to cart widget

--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -5,7 +5,7 @@
     <div class="container">
 
       <div style="float: right;">
-        {% include "store/cart.html" %}
+        {% include "cart/cart_widget.html" %}
       </div>
     
       <div class="row">
